src/objects/Configuracion_General__mdt.object
<CustomObject>
    <description>Variables con Configuración general</description>
    <fields>
        <fullName>CF_DAT_Valor__c</fullName>
        <label>Valor (Fecha)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_DEC_Valor__c</fullName>
        <label>Valor (Decimal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_NUM_Valor__c</fullName>
        <description>Campo que contiene el número mínimo de gremios para tratar un siniestro como Siniestro Grave</description>
        <label>Valor (Número)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_SEL_Categoria_Habilidad__c</fullName>
        <description>Categorías de las habilidades.</description>
        <label>Categoría</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C_</fullName>
                    <label>Carnets</label>
                </value>
                <value>
                    <fullName>E_</fullName>
                    <label>Especialidad</label>
                </value>
                <value>
                    <fullName>H_</fullName>
                    <label>Herramientas</label>
                </value>
                <value>
                    <fullName>M_</fullName>
                    <label>Marcas</label>
                </value>
                <value>
                    <fullName>L_</fullName>
                    <label>Aparatos</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_SEL_Unidad_Medida__c</fullName>
        <label>Unidad de medida</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <default>true</default>
                    <label>Segundos</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>Minutos</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>Horas</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>Días</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>Semanas</label>
                </value>
                <value>
                    <fullName>06</fullName>
                    <label>Meses</label>
                </value>
                <value>
                    <fullName>07</fullName>
                    <label>Años</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_TXT_Valor__c</fullName>
        <label>Valor (Texto)</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <label>Configuración General</label>
    <listViews>
        <fullName>Todas_las_Configuraciones_Generales</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>CF_TXT_Valor__c</columns>
        <columns>CF_DEC_Valor__c</columns>
        <columns>CF_DAT_Valor__c</columns>
        <columns>CF_NUM_Valor__c</columns>
        <columns>CF_SEL_Categoria_Habilidad__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todas las Configuraciones Generales</label>
    </listViews>
    <pluralLabel>Configuraciones Generales</pluralLabel>
</CustomObject>